--- a/src/css/search.css
+++ b/src/css/search.css
@@ -5,7 +5,7 @@
     padding: 0 1rem;
 }
 
-#search-input {
+.search-container #search-input {
     width: 100%;
     padding: 0.8rem;
     font-size: 1rem;
@@ -16,7 +16,7 @@
     margin-bottom: 1rem;
 }
 
-#search-input:focus {
+.search-container #search-input:focus {
     outline: none;
     border-color: var(--primary-color);
 }
